--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,13 @@ dependencies:
   http:
   provider: ^6.1.2
   dio: ^5.4.1
-  firebase_auth: ^4.17.7
+  firebase_auth: ^4.17.9
   google_maps_flutter:
   page_transition: ^2.1.0
   geolocator: ^10.1.0
   permission_handler: ^11.3.0
   flutter_svg: ^2.0.10+1
-  firebase_core: ^2.26.0
+  firebase_core: ^2.27.1
 
   location: ^5.0.3
   flutter_polyline_points: ^2.0.0
@@ -74,7 +74,8 @@ dependencies:
   get_it: ^7.6.4
   map_location_picker: 1.2.7
 
-
+dependency_overrides:
+  web: ^0.5.1
 
 dev_dependencies:
   flutter_test:
@@ -85,7 +86,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   very_good_analysis: ^5.1.0
 
 
